apps/website/service.yaml
# Service website
# ===============
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
